# modetrend

./: .gitignore  README.md  Untitled.ipynb  modetrendexo.ipynb  pyproject.toml
scripts/: segmentation_api.py  test_segmentation.py
